2001-01-08  Fernando Nasser  <fnasser@redhat.com>

	* Makefile.in (install-gdbtk): Add .itcl files to the list of files
	to be installed.

2001-01-04  Michael Snyder  <msnyder@mvstp600e.cygnus.com>

	* mips-tdep.c (mips_coerce_float_to_double): Fix typo in comment.

2001-01-04  Nicholas Duffek  <nsd@redhat.com>

	* valops.c (VALUE_SUBSTRING_START): Delete.

2001-01-04  Nicholas Duffek  <nsd@redhat.com>

	* Makefile.in (SUBDIR_CLI_OBS): Add cli/cli-utils.o.
	(SUBDIR_CLI_SRCS): Add cli/cli-utils.c.
	(cli_utils_h): New variable.
	(cli/cli-utils.o): New rule.
	* cli/cli-utils.c: New file.
	* cli/cli-utils.h: New file.

2001-01-04  Nicholas Duffek  <nsd@redhat.com>

	* config/i386/tm-i386.h (REGISTER_CONVERT_TO_VIRTUAL,
	REGISTER_CONVERT_TO_RAW): Delete trailing semicolon.

2001-01-03  J.T. Conklin  <jtc@redback.com>

	* alphabsd-nat.c, i386-linux-nat.c, i386bsd-nat.c: Fix typo in
 	comment.

2001-01-02  Michael Snyder  <msnyder@cleaver.cygnus.com>

	* sh-tdep.c (sh_extract_return_value):  Allow for small return type.
	(sh_sh4_extract_return_value): Call sh_extract_return_value for
	non-float types.
	* sparc-tdep.c (sparc_frame_chain): Fix typo in comment.
	Update copyright notice.
	
2000-12-20  Michael Snyder  <msnyder@mvstp600e.cygnus.com>

	* arch-utils.c (default_frame_address): New function.  Default
	implementation of frame_args_address and frame_locals_address.
	* arch-utils.h (default_frame_address): Export.
	* d10v-tdep.c (d10v_gdbarch_init): Use default_frame_address.
	(d10v_frame_args_address, d10v_frame_locals_address): Delete.
	* sh-tdep.c (sh_gdbarch_init): Use default_frame_address.
	(sh_frame_args_address, sh_frame_locals_address): Delete.
	* sparc-tdep.c (sparc_gdbarch_init): Use default_frame_address.
	(sparc_frame_address): Delete.

2000-12-27  Mark Kettenis  <kettenis@gnu.org>

	Fix debugging programs statically linked against the thread library.
	* thread-db.c: Various comment fixes and additions.
	Include "bfd.h", "symfile.h" and "objfiles.h".